@@ -1,3 +1,5 @@
+Jun 01, 2026: libarchive 3.8.1 released
+
 May 20, 2025: libarchive 3.8.0 released
 
 Mar 30, 2025: libarchive 3.7.9 released
